--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,16 @@
     "require": {
         "php": ">=5.6.4",
         "firephp/firephp-core": "^0.4.0",
+        "laravel/browser-kit-testing": "^2.0",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4",
+        "patricktalmadge/bootstrapper": "^5.10"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^2.4",
         "fzaninotto/faker": "~1.4",
+        "laravel/dusk": "^1.1",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
     },
